--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+  <script async src="https://platform.twitter.com/widgets.js"></script>
 </html>
