qrcode, icon animations, height fixes

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,11 @@
       content="Web site created using create-react-app"
     />
     <!-- PWA to fill behind apple notch & status bar. (also need viewport-fit=cover which is already set in previous meta viewport)-->
-    <meta name="apple-mobile-web-app-capable" content="yes"></meta>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"></meta>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <!-- End pwa apple notch & status bar-->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -31,6 +34,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Madison Olguin</title>
   </head>
   <body>
@@ -47,6 +56,4 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-
-  <script async src="https://platform.twitter.com/widgets.js"></script>
 </html>
