--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" sizes="any" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%//favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%//favicon-16x16.png"
+    /> -->
     <meta
       id="meta-viewport"
       name="viewport"
@@ -23,7 +35,11 @@
     />
     <!-- End pwa apple notch & status bar-->
     <!--  -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
     <meta name="apple-mobile-web-app-title" content="MaddieOlguin" />
 
     <link rel="apple-touch-startup-image" href="/launch.jpg" />
